@@ -2,10 +2,12 @@ package com.java.examples.test;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.averagingInt;
 import static java.util.stream.Collectors.groupingBy;
 
 public class StreamAPITest {
@@ -20,39 +22,36 @@ public class StreamAPITest {
 		
 		Set<String> middleResult = new HashSet<>();
 		
-		List<String> resultLlist = listOfLists.stream()
-				.flatMap(List::stream)
-				.filter(s -> s.startsWith("S"))
-				.peek(s -> middleResult.add(s))
-				.map(s -> s.toUpperCase())
-				.distinct()
-				.collect(Collectors.toList());
+		List<String> resultLlist = new ArrayList<>(listOfLists.stream()
+                .flatMap(List::stream)
+                .peek(s -> {
+                    if (s.startsWith("R")) middleResult.add(s);
+                })
+                .filter(s -> s.startsWith("S"))
+                .map(String::toUpperCase)
+                .distinct()
+                .toList());
        
-		resultLlist.sort((s1, s2) -> s1.compareTo(s2));
+		//resultLlist.sort((s1, s2) -> s1.compareTo(s2));
 		
 		resultLlist.sort(Comparator.naturalOrder());
-		resultLlist.sort(Comparator.reverseOrder());
 		
-		Collections.sort(resultLlist, Comparator.reverseOrder());  
-		middleResult.forEach(s -> System.out.println(s));
+		//Collections.sort(resultLlist, Comparator.reverseOrder());
+		middleResult.forEach(System.out::println);
 		
-		resultLlist.forEach(s -> System.out.println(s));
+		resultLlist.forEach(System.out::println);
 		
 		String csvString = String.join(",", resultLlist);
+		String csvString2 = resultLlist.stream().collect(Collectors.joining(","));
+
 		
-		Comparator<String> stringCompare1 = new Comparator<String>() {			
-			@Override
-			public int compare(String str1, String str2) {
-				
-				return str1.compareTo(str2);
-			}
-		};
+		Comparator<String> stringCompare1 = String::compareTo;
 		
 		List<String> synchronizedlist =  Collections.synchronizedList(resultLlist);
 		 //below one equals to above one
-		Comparator<String> stringCompare2 = (str1, str2) -> str1.compareTo(str2);
+		//Comparator<String> stringCompare2 = (str1, str2) -> str1.compareTo(str2);
 		
-		resultLlist.sort(stringCompare2);
+		resultLlist.sort(stringCompare1);
 		 List<String> names = Arrays.asList(
 		            "Reflection", "Collection", "Stream",
 		            "Structure", "Sorting", "State"
@@ -61,14 +60,14 @@ public class StreamAPITest {
 		 //Collect all the elements that starts with 'S'
 		 List<String> sNames = names.stream()
                  .filter(name -> name.startsWith("S"))
-                 .collect(Collectors.toList());
+                 .toList();
 		
 		// reduce: Concatenate all names into a single string
-	        String concatenatedNames = names.stream().reduce("Ramesh : ", (partialString, element) -> partialString + " " + element);
-	       System.out.println(concatenatedNames);
+	        String concatenatedNames = names.stream().reduce("", (partialString, element) -> partialString + " " + element);
+	       System.out.println(" concatenatedNames: " + concatenatedNames);
 	    
 	     // findFirst: Find the first name
-	        Optional<String> firstName = names.stream().findFirst();
+	        String firstName = names.stream().findFirst().orElse("No Name Found");
 	        
 	      
 	     // allMatch: Check if all names start with 'S'
@@ -82,10 +81,16 @@ public class StreamAPITest {
 	        );
 	        
 	     //Grouping By 
-	        List<BlogPost> posts = Arrays.asList(new BlogPost("java", "Ram", BlogPostType.GUIDE, 10));
+	        List<BlogPost> posts = List.of(new BlogPost("Spring", "Ram", BlogPostType.GUIDE, 10),new BlogPost("java", "Ram", BlogPostType.GUIDE, 10)
+					           , new BlogPost("HR", "Mansi", BlogPostType.GUIDE, 10)
+		                       ,new BlogPost("Marketing", "Meenu", BlogPostType.REVIEW, 10)
+					          ,new BlogPost("Operations", "ITI", BlogPostType.NEWS, 10));
 	        
 	        Map<BlogPostType, List<BlogPost>> postsPerType = posts.stream()
 	        		  .collect(groupingBy(BlogPost::getType));
+
+		   System.out.println("Grouping By : " + postsPerType);
+
 	        //Pair as Key
 			/*
 			 * Map<Pair<BlogPostType, String>, List<BlogPost>> postsPerTypeAndAuthor =
@@ -96,17 +101,22 @@ public class StreamAPITest {
 	        // Tuple class as key
 	        Map<Tuple, List<BlogPost>> postsPerTypeAndAuthor1 = posts.stream()
 	        		  .collect(groupingBy(post -> new Tuple(post.getType(), post.getAuthor())));
-	        
+		     System.out.println("Grouping By  Tuple class as key : " + postsPerType);
+
+
 	        //Grouping by multiple fields
 	        Map<String, Map<BlogPostType, List<BlogPost>>> map = (Map<String, Map<BlogPostType, List<BlogPost>>>) posts.stream()
 	        		  .collect(Collectors.groupingBy(BlogPost::getAuthor, Collectors.groupingBy(BlogPost::getType)));
-	        
-	        //Grouping By average  
-			/*
-			 * Map<BlogPostType, Double> averageLikesPerType = posts.stream()
-			 * .collect(groupingBy(BlogPost::getType, averagingInt(BlogPost::getLikes)));
-			 */
-	        
+
+		     System.out.println("Grouping By multiple fields as key : " + postsPerType);
+
+	        //Grouping By average
+			 Map<BlogPostType, Double> averageLikesPerType = posts.stream()
+			  .collect(groupingBy(BlogPost::getType, averagingInt(BlogPost::getLikes)));
+
+
+		    System.out.println("Grouping By averagingInt multiple fields as key : " + postsPerType);
+
 	        List<String> collect = posts.stream().map(BlogPost::getTitle).collect(Collectors.toList());
 	        
 	        Function<BlogPost, String> postMap = new Function<BlogPost, String>() {				
@@ -134,7 +144,14 @@ public class StreamAPITest {
 			
 			List<String> collectPredicate1 = names.stream().filter(predicate2).collect(Collectors.toList());
 			List<String> collectPredicate2 = names.stream().filter(predicate2).collect(Collectors.toList());
-			
+
+		    Consumer<String> consumer = new Consumer<String>() {
+				@Override
+				public void accept(String s) {
+					// operate on String " s "
+				}
+			};
+
 			ConcurrentHashMap<Integer, String> mapC = new ConcurrentHashMap<>();
 			mapC.put(1, "One");
 			
@@ -188,8 +205,16 @@ class BlogPost {
 	public void setLikes(int likes) {
 		this.likes = likes;
 	}
-    
-    
+
+	@Override
+	public String toString() {
+		return "BlogPost{" +
+				"title='" + title + '\'' +
+				", author='" + author + '\'' +
+				", type=" + type +
+				", likes=" + likes +
+				'}';
+	}
 }
 
 enum BlogPostType {
@@ -202,7 +227,6 @@ class Tuple {
     BlogPostType type;
     String author;
 	public Tuple(BlogPostType type, String author) {
-		super();
 		this.type = type;
 		this.author = author;
 	}
